# discordsoundsu

./: .gitignore  Dockerfile  LICENSE  README.md  connect.py  pyproject.toml  requirements.txt  run_discordsoundsu.sh
src/discordsoundsu/: __init__.py  api.py  client.py  main.py  sounds_manager.py  types.py  utils.py
src/discordsoundsu/commands/: owner.py  sleep.py  sounds.py  vc.py
src/discordsoundsu/ui/: sleep_info_card.py  sounds_card.py
